[gd_scene load_steps=8 format=3 uid="uid://c2428of2bxws5"]

[ext_resource type="Script" path="res://enemies/grounded_enemy_movement.gd" id="1_je7ku"]
[ext_resource type="Texture2D" uid="uid://ddky7a3mfyd6d" path="res://icon.svg" id="1_l55vi"]
[ext_resource type="Script" path="res://enemies/enemy_health.gd" id="2_tffnr"]
[ext_resource type="Script" path="res://enemies/floor_detector.gd" id="3_ujbe5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngcot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byuxp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ehtn"]
radius = 3.0

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_je7ku")

[node name="EnemyHealth" type="Node" parent="."]
script = ExtResource("2_tffnr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ngcot")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_byuxp")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(-2.38419e-07, -10)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_l55vi")

[node name="FloorDetector" type="Area2D" parent="SpriteHolder"]
collision_layer = 0
script = ExtResource("3_ujbe5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteHolder/FloorDetector"]
position = Vector2(12, 4)
shape = SubResource("CircleShape2D_1ehtn")

[node name="ObstacleDetector" type="Area2D" parent="SpriteHolder"]
collision_layer = 0
script = ExtResource("3_ujbe5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteHolder/ObstacleDetector"]
position = Vector2(15, -4)
shape = SubResource("CircleShape2D_1ehtn")

[connection signal="got_hit" from="EnemyHealth" to="." method="_on_hit"]
[connection signal="body_entered" from="SpriteHolder/FloorDetector" to="SpriteHolder/FloorDetector" method="_on_tile_detected"]
[connection signal="body_exited" from="SpriteHolder/FloorDetector" to="SpriteHolder/FloorDetector" method="_on_tile_lost"]
[connection signal="body_entered" from="SpriteHolder/ObstacleDetector" to="SpriteHolder/ObstacleDetector" method="_on_tile_detected"]
[connection signal="body_exited" from="SpriteHolder/ObstacleDetector" to="SpriteHolder/ObstacleDetector" method="_on_tile_lost"]
